--- a/css/common.css
+++ b/css/common.css
@@ -12,6 +12,7 @@
   --primary-bg-color: #ffffff;
   --secondary-bg-color: #f5f4fa;
   --third-bg-color: #2f303a;
+  --white-color: #ffffff;
 }
 
 body {
