--- a/css/studio.css
+++ b/css/studio.css
@@ -3,7 +3,7 @@
   background-color: var(--third-bg-color);
 }
 .hero-title {
-  color: var(--primary-white-color);
+  color: var(--white-color);
   margin: 0;
 }
 .buttom {
