--- a/css/common.css
+++ b/css/common.css
@@ -14,6 +14,7 @@
   --secondary-bg-color: #f5f4fa;
   --third-bg-color: #2f303a;
   --white-color: #ffffff;
+  --black-logo: #000000;
 }
 
 body {
@@ -26,14 +27,13 @@ a {
   text-decoration: none;
 }
 header {
-  background-color: var(--primary-white-color);
+  background-color: var(--primary-bg-color);
 }
 
 /* Навигация сайта */
 .logo {
-  color: #000000;
+  color: var(--black-logo) !important;
   font-family: Raleway;
-
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
