--- a/css/studio.css
+++ b/css/studio.css
@@ -1,4 +1,4 @@
-h2 {
+.sections-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -9,6 +9,7 @@ h2 {
 .hero {
   background-color: var(--third-bg-color);
 }
+
 .hero-title {
   color: var(--white-color);
 
@@ -19,6 +20,7 @@ h2 {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
+
 .buttom {
   color: var(--primary-bg-color);
   background-color: var(--accent-color);
@@ -31,12 +33,8 @@ h2 {
 }
 
 /* FEATURES SECTION */
-.features h2,
-.features h2::selection {
-  color: rgba(0, 0, 0, 0);
-  background-color: rgba(0, 0, 0, 0);
-}
-.features h3 {
+
+.features-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -54,7 +52,8 @@ h2 {
 .team {
   background-color: var(--secondary-bg-color);
 }
-.team h3 {
+
+.team-title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
