доавялет ссылки в список примеров работ

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -19,6 +19,7 @@
 
 /* Список примеров */
 .examples-title {
+  color: var(--primary-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
